# kickforge

./: BRIEF-KICKFORGE-V2.md  BRIEF-KICKFORGE.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CompilerWarnings.cmake
docs/: ARCHITECTURE.md
packaging/: LISEZMOI-TEST.txt
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AttackLayer.cpp  AttackLayer.h  ClipStage.cpp  ClipStage.h  CompStage.cpp  CompStage.h  CrunchLayer.cpp  CrunchLayer.h  DistStage.cpp  DistStage.h  DriveStage.cpp  DriveStage.h  EqStage.cpp  EqStage.h  FilterStage.cpp  FilterStage.h  FxStage.cpp  FxStage.h  KickEngine.cpp  KickEngine.h  KickVoice.cpp  KickVoice.h  WidthStage.cpp  WidthStage.h
src/export/: WavExporter.cpp  WavExporter.h
src/presets/: GenrePresets.h  StateMigration.h
src/ui/: EqCurveDisplay.cpp  EqCurveDisplay.h  LookAndFeel.cpp  LookAndFeel.h  PresetBar.cpp  PresetBar.h  SectionPanel.cpp  SectionPanel.h  UiScaling.h  WaveformDisplay.cpp  WaveformDisplay.h
tests/: dsp_tests.cpp
